--- a/templates/nav.html
+++ b/templates/nav.html
@@ -25,29 +25,22 @@
 				</div>
 
 				<span class="topbar-child1">
-					Free shipping for standard order over $100
+					Free shipping for standard order over ₹1 Lack
 				</span>
 
 				<div class="topbar-child2">
 					<span class="topbar-email">
-						<a href="https://github.com/zinmyoswe">
-						overmidnight12@gmail.com
+						<a href="https://github.com/PanduNamburi">
+						<h3>AURA BOYS</h3>
 					    </a>
 					</span>
-
-					<div class="topbar-language rs1-select2">
-						<select class="selection-1" name="time">
-							<option>USD</option>
-							<option>EUR</option>
-						</select>
-					</div>
 				</div>
 			</div>
 
 			<div class="wrap_header">
 				<!-- Logo -->
 				<a href="/" class="logo">
-					<p style="color: black; "><b style="font-size: 22px;">D</b>JANGO SHOP</p>
+					<p style="color: black; "><b style="font-size: 22px;">S</b>igma's Shopping - <b style="font-size: 22px;">SS</b></p>
 				</a>
 
 				<!-- Menu -->
@@ -212,7 +205,7 @@
 					<li class="item-topbar-mobile p-l-20 p-t-8 p-b-8">
 						<div class="topbar-child2-mobile">
 							<span class="topbar-email">
-								fashe@example.com
+								pandunamburi18@gmail.com
 							</span>
 
 							<div class="topbar-language rs1-select2">
